# mull

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  Makefile  README.md  SECURITY.md  architecture.md  docker-compose.yml  package.json  pnpm-lock.yaml  pricing.md  product-spec.md  roadmap.md  self-hosting.md  vision.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/scripts/: ai_review.py
.github/workflows/: ai-review.yml
apps/extractor/: main.py  pyproject.toml  requirements.txt
apps/extractor/tests/: test_extractor.py
apps/web/: Dockerfile  jest.config.ts  jest.setup.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/(app)/: layout.tsx
apps/web/src/app/(auth)/: actions.ts
apps/web/src/app/(auth)/components/: AuthForm.tsx
apps/web/src/app/(auth)/login/: page.tsx
apps/web/src/lib/ai/: askAI.test.ts  askAI.ts  config.test.ts  config.ts  context.test.ts  context.ts  highlightChat.test.ts  highlightChat.ts  prompts.test.ts  prompts.ts  provider.test.ts  provider.ts
apps/web/src/lib/extract/: pdf.test.ts  pdf.ts
apps/web/src/lib/supabase/: client.ts  middleware.ts  server.ts
apps/web/src/test-utils/: supabase.ts
supabase/: config.toml
supabase/migrations/: 20260628000000_initial_schema.sql  20260629000000_storage_policies.sql  20260629000001_rls_junction_fixes.sql  20260703000000_notes_rls_fix.sql  20260703000001_ai_conversations_unique.sql  20260704000000_highlight_conversations.sql
(+33 files in other folders)
