[project]
name = "mull-extractor"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pymupdf==1.24.11",
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "python-multipart==0.0.12",
]

[dependency-groups]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "httpx==0.27.2",
]
